# project_2_rumyancev_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  metadata.py  parser.py  utils.py
