[tool.poetry]
name = "project_2_rumyancev_m25-555"
version = "0.1.0"
description = ""
authors = ["Sergey Rumyancev <133sergey@gmail.com>"]
readme = "README.md"
packages = [{include = "primitive_db", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
database = "primitive_db.main:main"


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

